# vibe-coding-scm-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  WORKFLOW.md  openapi-specs  pyproject.toml
docs/: BUILD-FROM-ZERO.md  PRD.md  VIBE-CODING-BEST-PRACTICES.md
scm_mcp_server/: __main__.py  auth.py  check.py  config.py  rest_client.py  server.py
scm_mcp_server/tools/: __init__.py  incidents.py  objects.py  readonly.py  security.py  special.py  write.py
scripts/: route_integrity.py  smoke_stdio.py  syntax_check.py
tests/: test_auth.py  test_config.py  test_readonly_tools.py  test_rest_client.py  test_special_tools.py  test_write_tools.py
