[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-mcp-server"
version = "0.1.0"
description = "MCP server exposing Palo Alto Networks SCM REST API via stdio"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
scm-mcp-server = "scm_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scm_mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
